--- a/mmadu-registration/src/main/resources/application.yml
+++ b/mmadu-registration/src/main/resources/application.yml
@@ -32,136 +32,86 @@ mmadu:
   registration:
     home: ${mmadu.home}/registration
     templates: ${mmadu.registration.home}/templates
-    profile-config:
-      profiles:
-        - id: 1
-          domainId: 0
-          defaultRedirectUrl: https://google.com
-          headerOne: My App
-          headerThree: Register
-          instruction: Fill all the fields to register
-          submitButtonTitle: GO!!
-    field-type-config:
+    domain-flow-config:
       field-types:
-        - id: 1
+        - id: mmadu.fields.text
           name: text
           type: text
           markup: "<label for='$field.name' class='sr-only'>$field.label</label><input type='text' id='$field.name' name='$field.name' class='form-control' placeholder='$field.placeholder' autofocus $required $inputField $inputStyle $errorStyle >$errorDisplay"
-        - id: 2
+        - id: mmadu.fields.email
           name: email
           type: text
           markup: "<label for='$field.name' class='sr-only'>$field.label</label><input type='email' id='$field.name' name='$field.name' class='form-control' placeholder='$field.placeholder' autofocus $required $inputField $inputStyle $errorStyle >$errorDisplay"
-        - id: 3
+        - id: mmadu.fields.password
           name: password
           type: text
           markup: "<label for='$field.name' class='sr-only'>$field.label</label><div class='input-group' id='show_hide_password'><input class='form-control' id='$field.name' name='$field.name' placeholder='$field.placeholder' type='password' $required $inputField  $inputStyle $errorStyle> <div  class='input-group-addon'><a href><i class='fa fa-eye' aria-hidden='true'></i></a></div></div>"
           classes: "form-group"
           script: "$(document).ready(function() {$('#show_hide_password a').on('click', function(event) {event.preventDefault(); if($('#show_hide_password input').attr('type') == 'text'){$('#show_hide_password input').attr('type', 'password'); $('#show_hide_password i').addClass( 'fa-eye-slash' ); $('#show_hide_password i').removeClass( 'fa-eye' ); }else if($('#show_hide_password input').attr('type') == 'password'){$('#show_hide_password input').attr('type', 'text'); $('#show_hide_password i').removeClass( 'fa-eye-slash' ); $('#show_hide_password i').addClass( 'fa-eye' ); } }); });"
           css: "#show_hide_password input {margin:0px;}"
-        - id: 4
+        - id: mmadu.fields.integer
           name: integer
           type: integer
           markup: "<label for='$field.name' class='sr-only'>$field.label</label><input type='number' id='$field.name' name='$field.name' class='form-control' placeholder='$field.placeholder' $maxValue $minValue autofocus $required $inputField $inputStyle $errorStyle >$errorDisplay"
           min: 10
           max: 100
-        - id: 5
+        - id: mmadu.fields.amount
           name: decimal
           type: decimal
           markup: "<label for='$field.name' class='sr-only'>$field.label</label><input type='number' step='any' id='$field.name' name='$field.name' class='form-control' placeholder='$field.placeholder' $maxValue $minValue autofocus $required $inputField $inputStyle $errorStyle >$errorDisplay"
           min: 1
           max: 1000
-        - id: 6
+        - id: mmadu.fields.date
           name: date
           type: date
           markup: "<label for='$field.name' class='sr-only'>$field.label</label><input type='date' id='$field.name' name='$field.name' class='form-control' placeholder='$field.placeholder' autofocus $maxValue $minValue $required $inputField $inputStyle $errorStyle >$errorDisplay"
           min: 1990-01-01
           max: 2022-01-01
-        - id: 7
+        - id: mmadu.fields.time
           name: time
           type: time
           markup: "<label for='$field.name' class='sr-only'>$field.label</label><input type='time' id='$field.name' name='$field.name' class='form-control' placeholder='$field.placeholder' autofocus $maxValue $minValue $required $inputField $inputStyle $errorStyle >$errorDisplay"
           min: "09:30"
           max: "22:30"
-        - id: 8
+        - id: mmadu.fields.datetime
           name: datetime
           type: datetime
           markup: "<label for='$field.name' class='sr-only'>$field.label</label><input type='datetime-local' id='$field.name' name='$field.name' class='form-control' placeholder='$field.placeholder' $maxValue $minValue autofocus $required $inputField $inputStyle $errorStyle >$errorDisplay"
           min: 2011-08-19T13:45:00
           max: 2020-08-19T13:45:00
-    field-config:
-      fields:
-        - id: 1
-          name: email
-          domainId: 0
-          placeholder: Email
-          property: email
-          fieldTypeId: 2
-          label: Email
-          order: 1
-          required: true
-        - id: 2
-          name: full-name
-          domainId: 0
-          placeholder: Full Name
-          property: fullName
-          fieldTypeId: 1
-          label: Full Name
-          order: 2
-          required: true
-        - id: 3
-          name: username
-          domainId: 0
-          placeholder: Username
-          property: username
-          fieldTypeId: 1
-          label: Username
-          order: 3
-          required: true
-        - id: 4
-          name: password
-          domainId: 0
-          placeholder: Password
-          property: password
-          fieldTypeId: 3
-          label: Password
-          order: 4
-        - id: 5
-          name: age
-          domainId: 0
-          placeholder: Age
-          property: age
-          fieldTypeId: 4
-          label: Age
-          order: 5
-        - id: 6
-          name: amount
-          domainId: 0
-          placeholder: Amount
-          property: amount
-          fieldTypeId: 5
-          label: Amount
-          order: 6
-        - id: 7
-          name: birthday
-          domainId: 0
-          placeholder: Birthday
-          property: birthday
-          fieldTypeId: 6
-          label: Birthday
-          order: 7
-        - id: 8
-          name: openingTime
-          domainId: 0
-          placeholder: Opening Time
-          property: openingTime
-          fieldTypeId: 7
-          label: Opening Time
-          order: 8
-        - id: 9
-          name: deliveryDate
-          domainId: 0
-          placeholder: Delivery Date and Time
-          property: deliveryDate
-          fieldTypeId: 8
-          label: Delivery Date and Time
-          order: 9
+      domains:
+        - domainId: 0
+          registrationProfile:
+            defaultRedirectUrl: https://google.com
+            headerOne: Mmadu
+            headerThree: Register
+            instruction: Fill all the fields to register
+            submitButtonTitle: GO!!
+          fields:
+            - name: email
+              placeholder: Email
+              property: email
+              fieldTypeId: mmadu.fields.email
+              label: Email
+              order: 1
+              required: true
+            - name: full-name
+              placeholder: Full Name
+              property: fullName
+              fieldTypeId: mmadu.fields.text
+              label: Full Name
+              order: 2
+              required: true
+            - name: username
+              placeholder: Username
+              property: username
+              fieldTypeId: mmadu.fields.text
+              label: Username
+              order: 3
+              required: true
+            - name: password
+              placeholder: Password
+              property: password
+              fieldTypeId: mmadu.fields.password
+              label: Password
+              order: 4
