--- a/docker/prod/docker-compose.yml
+++ b/docker/prod/docker-compose.yml
@@ -3,6 +3,7 @@ services:
   mmadu-user-service:
     image: geraldoyudo/mmadu-user-service:2.0.0-SNAPSHOT
     environment:
+      - SPRING_PROFILES_ACTIVE=prod
       - MMADU_USER_DB_HOST=mongodb
       - MMADU_USER_DB_NAME=${MMADU_USER_DB_NAME:mmadu_db}
       - MMADU_IDENTITY_URL=http://mmadu-identity:8080
@@ -18,6 +19,7 @@ services:
   mmadu-registration:
     image: geraldoyudo/mmadu-registration:2.0.0-SNAPSHOT
     environment:
+      - SPRING_PROFILES_ACTIVE=prod
       - MMADU_USER_URL=http://mmadu-user-service:8080
       - MMADU_REGISTRATION_DB_HOST=mongodb
       - MMADU_REGISTRATION_DB_NAME=${MMADU_REGISTRATION_DB_NAME:mmadu_db}
@@ -35,6 +37,7 @@ services:
   mmadu-identity:
     image: geraldoyudo/mmadu-identity:2.0.0-SNAPSHOT
     environment:
+      - SPRING_PROFILES_ACTIVE=prod
       - MMADU_IDENTITY_DB_HOST=mongodb
       - MMADU_IDENTITY_DB_NAME=${MMADU_IDENTITY_DB_NAME:mmadu_db}
       - MMADU_USER_URL=http://mmadu-user-service:8080
