--- a/mmadu-registration/pom.xml
+++ b/mmadu-registration/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.mmadu</groupId>
     <artifactId>mmadu-registration</artifactId>
-    <version>2.0.1</version>
+    <version>2.0.2-SNAPSHOT</version>
     <name>mmadu-registration</name>
     <description>User Registration Service</description>
 
@@ -82,7 +82,7 @@
         <dependency>
             <groupId>com.mmadu</groupId>
             <artifactId>security-utils</artifactId>
-            <version>2.0.1</version>
+            <version>2.0.2-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.restdocs</groupId>
