--- a/mmadu-identity/pom.xml
+++ b/mmadu-identity/pom.xml
@@ -149,6 +149,10 @@
             <artifactId>theme-utils</artifactId>
             <version>2.0.2-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
