--- a/mmadu-registration/src/main/resources/application.yml
+++ b/mmadu-registration/src/main/resources/application.yml
@@ -81,12 +81,13 @@ mmadu:
           max: 2020-08-19T13:45:00
       domains:
         - domainId: 0
-          registrationProfile:
-            defaultRedirectUrl: https://google.com
-            headerOne: Mmadu
-            headerThree: Register
-            instruction: Fill all the fields to register
-            submitButtonTitle: GO!!
+          registration-profiles:
+            - defaultRedirectUrl: https://google.com
+              code: user
+              headerOne: Mmadu
+              headerThree: Register
+              instruction: Fill all the fields to register
+              submitButtonTitle: GO!!
           fields:
             - name: email
               placeholder: Email
