--- a/mmadu-registration/src/main/resources/application.yml
+++ b/mmadu-registration/src/main/resources/application.yml
@@ -88,8 +88,14 @@ mmadu:
               headerThree: Register
               instruction: Fill all the fields to register
               submitButtonTitle: GO!!
+              fields:
+                - mmadu.field.email
+                - mmadu.field.full_name
+                - mmadu.field.username
+                - mmadu.field.password
           fields:
             - name: email
+              code: mmadu.field.email
               placeholder: Email
               property: email
               fieldTypeId: mmadu.fields.email
@@ -97,6 +103,7 @@ mmadu:
               order: 1
               required: true
             - name: full-name
+              code: mmadu.field.full_name
               placeholder: Full Name
               property: fullName
               fieldTypeId: mmadu.fields.text
@@ -104,6 +111,7 @@ mmadu:
               order: 2
               required: true
             - name: username
+              code: mmadu.field.username
               placeholder: Username
               property: username
               fieldTypeId: mmadu.fields.text
@@ -111,6 +119,7 @@ mmadu:
               order: 3
               required: true
             - name: password
+              code: mmadu.field.password
               placeholder: Password
               property: password
               fieldTypeId: mmadu.fields.password
