--- a/mmadu-registration/src/test/resources/application-populated.yml
+++ b/mmadu-registration/src/test/resources/application-populated.yml
@@ -49,12 +49,12 @@ mmadu:
           max: 2020-08-19T13:45:00
       domains:
         - domainId: 0
-          registrationProfile:
-            defaultRedirectUrl: https://google.com
-            headerOne: My App
-            headerThree: Register
-            instruction: Fill all the fields to register
-            submitButtonTitle: GO!!
+          registration-profiles:
+            - defaultRedirectUrl: https://google.com
+              headerOne: My App
+              headerThree: Register
+              instruction: Fill all the fields to register
+              submitButtonTitle: GO!!
           fields:
             - name: email
               placeholder: Email
