--- a/common/pom.xml
+++ b/common/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.mmadu</groupId>
     <artifactId>common</artifactId>
-    <version>2.0.2-SNAPSHOT</version>
+    <version>2.0.2</version>
     <packaging>pom</packaging>
 
     <modules>
