--- a/common/security-utils/pom.xml
+++ b/common/security-utils/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.mmadu</groupId>
     <artifactId>security-utils</artifactId>
-    <version>2.0.2</version>
+    <version>2.0.3-SNAPSHOT</version>
     <build>
         <plugins>
             <plugin>
