--- a/mmadu-user-service/pom.xml
+++ b/mmadu-user-service/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.mmadu</groupId>
     <artifactId>mmadu-user-service</artifactId>
-    <version>2.0.2</version>
+    <version>2.0.3-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>mmadu-user-service</name>
@@ -99,7 +99,7 @@
         <dependency>
             <groupId>com.mmadu</groupId>
             <artifactId>encryption-utils</artifactId>
-            <version>2.0.2</version>
+            <version>2.0.3-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>javax.validation</groupId>
@@ -108,7 +108,7 @@
         <dependency>
             <groupId>com.mmadu</groupId>
             <artifactId>security-utils</artifactId>
-            <version>2.0.2</version>
+            <version>2.0.3-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
