--- a/mmadu-registration/pom.xml
+++ b/mmadu-registration/pom.xml
@@ -106,6 +106,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-cache</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.mmadu</groupId>
+            <artifactId>theme-utils</artifactId>
+            <version>2.0.3-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
