--- a/pom.xml
+++ b/pom.xml
@@ -17,5 +17,7 @@
         <module>mmadu-registration</module>
         <module>mmadu-identity</module>
         <module>mmadu-notifications</module>
+        <module>notifications</module>
+        <module>notifications/notification-endpoint</module>
     </modules>
 </project>
