--- a/mmadu-notifications/pom.xml
+++ b/mmadu-notifications/pom.xml
@@ -127,6 +127,11 @@
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>com.mmadu</groupId>
+            <artifactId>event-bus</artifactId>
+            <version>2.0.3-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
